Small alignment fixes

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -23,6 +23,7 @@ $reallylightpink-color: #f3ceef;
 figure{
 	margin: 0;
 }
+
 /* Keyframe animation CSS */
 
 @keyframes float {
@@ -110,6 +111,7 @@ a:hover {
 	font-size: 66px;
 	text-align: center;
 	padding: 150px 0 50px 0;
+	margin: 0;
 }
 
 @media (max-width: 767px) {
@@ -247,6 +249,10 @@ a:hover {
 	height: 100%;
 	background-size: cover;
 	background-position: center center;
+}
+
+.list_image-first{
+	background-position: center 20%;
 }
 
 @media (max-width: 767px) {
